syntax = "proto3";

service ChatServer{
  // Broadcast een bericht
  rpc sendMessage(chatMessage) returns (sentReply);

  //Ontvang alle broadcast berichten
  rpc getMessages()

  // Voeg gebruiker toe
  rpc addUser(userRequest) returns (userResponse);
}

message userRequest {
  string userName = 1;
}

message userResponse {
  int32 statusCode = 1;
}

message chatMessage {
  string sender = 1;
  string context = 2;
}

message sentReply {
  string statusCode = 1;
}